--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
+    "axios": "^1.6.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
